Fix upload-media swagger spec error
