# shared/swagger-spec.yaml
@@ -424,12 +424,6 @@ paths:
           in: path
           schema:
             type: integer
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/MediaDto"
       responses:
         default:
           description: ""
@@ -442,12 +436,6 @@ paths:
     post:
       operationId: upload
       parameters: []
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/MediaSingleDto"
       responses:
         default:
           description: Media file uploaded successfully
@@ -463,12 +451,6 @@ paths:
     post:
       operationId: uploadFiles
       parameters: []
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              $ref: "#/components/schemas/MediaDto"
       responses:
         default:
           description: Media files uploaded successfully
@@ -763,24 +745,6 @@ components:
             - dislike
       required:
         - react
-    MediaDto:
-      type: object
-      properties:
-        files:
-          type: array
-          items:
-            type: string
-            format: binary
-      required:
-        - files
-    MediaSingleDto:
-      type: object
-      properties:
-        file:
-          type: string
-          format: binary
-      required:
-        - file
     CreateCommentDto:
       type: object
       properties: {}
